infrastructure/networking/envoy-gateway/app/gatewayclass.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
  namespace: networking
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
