infrastructure/networking/envoy-gateway/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: https-wildcard
      hostname: "*.ng.serverton.de"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-serverton-de-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-root
      hostname: ng.serverton.de
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: serverton-de-tls
      allowedRoutes:
        namespaces:
          from: All
